--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
 rand = "0.8"
+
+[profile.release]
+codegen-units = 1
+lto = true
+strip = true
+opt-level = "z"
