--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,14 @@
 name = "someapp"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
 rand = "0.8"
+
+[target.'cfg(windows)'.build-dependencies]
+winres = "0.1.12"
 
 [profile.release]
 codegen-units = 1
